test/libyul/yulSyntaxTests/builtin_identifier_3.yul
{
	function f(x) { f(add) }
}
// ----
// DeclarationError 8198: (21-24): Identifier not found.
